--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                hard to release on other platforms
             </h4>
             <ul id="btns">
-               <li id="a"><a href="https://github.com/Mina-Engine/Mina/archive/master.zip">Alpha</a></li>
+               <li id="a"><a href="https://github.com/Mina-Engine/Mina/archive/master.zip">Pre-Alpha</a></li>
             </ul>
             </ul>
          </div>
