--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
 
       <div class="row">
          <div class="bub">
-            <h1>Download</h1>
+            <h1>Code</h1>
             <h4>
-               Mina is currently only available for windows, but we are working 
-               hard to release on other platforms
+               Mina runs currently only on Windows, but 
+               Compatibility with other platforms like MacOS
+               and Linux are planed for the Future.
             </h4>
             <ul id="btns">
-               <li id="a"><a href="https://github.com/Mina-Engine/Mina/archive/master.zip">Pre-Alpha</a></li>
+               <li id="a"><a href="https://github.com/Mina-Engine/Mina">Github Repository</a></li>
             </ul>
             </ul>
          </div>
@@ -109,8 +110,12 @@
       <div class="row">
          <div class="bub">
             <h1>Status</h1>
-            <h4>Current version:  0.0.75 Pre-Alpha</h4>
-            <img src="images/status.png" alt="status">
+            <h4>
+               Currently Mina hasn't been officialy released, 
+               the Alpha Version is still in work. You can 
+               folow the process of Mina by looking at the 
+               <a href="https://github.com/Mina-Engine/Mina">Github repository</a>.
+            </h4>
          </div>
       </div>
    </section>
@@ -119,11 +124,8 @@
          <div class="bub">
             <h1>Contact</h1>
             <h4>
-               If you want to tell us about a bug or just want to talk to us then you can contact us
-               on <a href="https://discord.gg/Cb7ts7J">Discord</a>.
-            </h4>
-            <h5>Owner: Akram Hssaini</h5>
-            <h5>Email: mina.game.engine@gmail.com</h5>
+            <h5>Akram Hssaini</h5>
+            <h5>mina.game.engine@gmail.com</h5>
          </div>
       </div>
    </section> <!-- About Section End-->
