--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
         <section class="app">
             <div>
-                <h1>lol</h1>
-                <h4>Bitches on my face, but still drowning -.-</h4>
+                <section class="lol" style="display:none">
+                    <h1>lol, Username ur Ugly</h1>
+                    <h4>Bitches on my face, but still drowning -.-</h4>
+                </section>
             </div>
         </section>
 
