bitches on my dick

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="app">
             <div>
                 <section class="lol" style="display:none">
-                    <h1>lol, Username ur Ugly</h1>
+                    <h1 id="title">lol, Username ur Ugly</h1>
                     <h4>Bitches on my face, but still drowning -.-</h4>
                 </section>
             </div>
