--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <title>MinaStar</title>
-    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
     <body>
         <div class="img-area"></div>
+
+        <section class="home">
+            <div>
+                <section class="lol" style="display:none">
+                    <h1 id="title">lol, Username ur Ugly</h1>
+                    <h4>Bitches on my face, but still drowning -.-</h4>
+                </section>
+            </div>
+        </section>
+
+
+
+
         <nav class="nav">
             
             <div class="logo">
@@ -28,16 +41,6 @@
             </div>
         </nav>
         <script src="scripts/navbar.js"></script>
-
-        <section class="app">
-            <div>
-                <section class="lol" style="display:none">
-                    <h1 id="title">lol, Username ur Ugly</h1>
-                    <h4>Bitches on my face, but still drowning -.-</h4>
-                </section>
-            </div>
-        </section>
-
 
         <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
