LError Messages for Login and Signup

--- a/p/login.html
+++ b/p/login.html
@@ -13,6 +13,7 @@
         <div class="box">
             <h1>Login</h1>
             <form action="" method="">
+                <h6 id="Error"></h6>
                 <div class="inputBox">
                     <input type="text" id="email" autocomplete="off" required>
                     <label> Email </label>
@@ -21,8 +22,8 @@
                     <input type="password" id="password" autocomplete="off" required>
                     <label> Password </label>
                 </div>
-                <button class="submit" >Sign Up</button>
-                <h6>You don't have an Account? <a href="../p/signup.html">Click here</a></h6>
+                <button class="submit" >Login</button>
+                <h6>You don't have an Account? <br> <a href="../p/signup.html">Click here</a></h6>
             </form>
 
         </div>
