--- a/p/signup.html
+++ b/p/signup.html
@@ -13,6 +13,7 @@
         <div class="box">
             <h1>Sign Up</h1>
             <form action="" method="">
+                <h6 id="Error"></h6>
                 <div class="inputBox">
                     <input type="text" id="username" autocomplete="off" required>
                     <label> Username </label>
