shop page added

--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
         <div class="img-area"></div>
 
         <div class="home">
-            <section>
-                <div style="display:none" class="logged-out" id="home-logged-out">
-                    <h4>U need to log in to view this page</h4>
-                </div>
-                <div style="display:none" class="logged-in" id="home-logged-in">
-                    <section class="lol">
-                        <h1 id="title">lol, Username ur Ugly</h1>
-                        <h4>Bitches on my face, but still drowning -.-</h4>
+            <div class="logged-out" style="display:none" >
+                <h4>U need to log in to view this page</h4>
+            </div>
+            <div class="logged-in" style="display:none" >
 
+                <div class="shop">
+                    <h1>Our Products</h1>
+                    <div class="product" id="product-1">
 
-                        <li>
-                            <input id="fn" type="text" placeholder="first number">
-                            <input id="sn" type="text" placeholder="second number">
-                            <button id="submit"> Get Results </button>
-                            <h4 id="results">Result: --</h4>
-                        </li>
-                    </section>
+                    </div>
+                    <div class="product" id="product-1">
+
+                    </div>
+                    <div class="product" id="product-1">
+
+                    </div>
+                    <div class="product" id="product-1">
+
+                    </div>
                 </div>
-            </section>
+            </div>
         </div>
 
 
