--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <title>MinaStar</title>
     <link rel="stylesheet" href="css/home.css">
@@ -13,23 +13,55 @@
 
         <div class="home">
             <div class="logged-out" style="display:none" >
-                <h4>U need to log in to view this page</h4>
+                <h4>You need to log in to view this page</h4>
             </div>
             <div class="logged-in" style="display:none" >
 
                 <div class="shop">
-                    <h1>Our Products</h1>
+                    <h1 style="text-align: center;margin-top: 10px; margin-bottom: 10px;">Our Products</h1>
                     <div class="product" id="product-1">
-
+                        <div class="content">
+                            <ul class="text">
+                                <li><h1>Views</h1></li>
+                                <li><h4>Item details</h4></li>
+                            </ul>
+                            <div class="button">
+                                <button id="buy1">Buy</button>
+                            </div>
+                         </div>
                     </div>
                     <div class="product" id="product-1">
-
+                        <div class="content">
+                            <ul class="text">
+                                <li><h1>Comments Hearts</h1></li>
+                                <li><h4>Item details</h4></li>
+                            </ul>
+                            <div class="button">
+                                <button id="buy2">Buy</button>
+                            </div>
+                         </div>
                     </div>
                     <div class="product" id="product-1">
-
+                        <div class="content">
+                            <ul class="text">
+                                <li><h1>Hearts</h1></li>
+                                <li><h4>Item details</h4></li>
+                            </ul>
+                            <div class="button">
+                                <button id="buy3">Buy</button>
+                            </div>
+                         </div>
                     </div>
                     <div class="product" id="product-1">
-
+                        <div class="content">
+                            <ul class="text">
+                                <li><h1>Follower</h1></li>
+                                <li><h4>Item details</h4></li>
+                            </ul>
+                            <div class="button">
+                                <button id="buy4">Buy</button>
+                            </div>
+                         </div>
                     </div>
                 </div>
             </div>
