--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <h4>MinaStar</h4>
             </div>
             <ul class="nav-links">
+                <li style="display:none" class="logged-in"><a href="p/purchases.html">Purchases</a></li>
                 <li style="display:none" class="logged-in"><a href="p/settings.html">Settings</a></li>
                 <li style="display:none" class="logged-in"><a id='logout' href="#">Logout</a></li>
                 <li style="display:none" class="logged-out"><a href="p/login.html">Login</a></li>
