--- a/p/signup.html
+++ b/p/signup.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <div class="img-area"></div>
+    <div class="nav">
+        <a href="/">
+            <div>
+                <i></i>
+                <h1>Back</h1>
+            </div>
+        </a>
+    </div>
+
     <div class="main_div">
         <div class="box">
             <h1>Sign Up</h1>
