Popup/Purchases/Overall bug fixes

--- a/index.html
+++ b/index.html
@@ -12,57 +12,63 @@
         <div class="img-area"></div>
 
         <div class="home">
-            <div class="logged-out" style="display:none" >
-                <h4>You need to log in to view this page</h4>
+            
+            <div class="popup">
+                <div class="popup-content">
+                    <div class="text">
+                        <h4 class="msg"></h4>
+                    </div>
+                    <div class="btn">
+                        <button class="btn" id="Close-Popup">Close</button>
+                    </div>
+                </div>
             </div>
-            <div class="logged-in" style="display:none" >
 
-                <div class="shop">
-                    <h1 style="text-align: center;margin-top: 10px; margin-bottom: 10px;">Our Products</h1>
-                    <div class="product" id="product-1">
-                        <div class="content">
-                            <ul class="text">
-                                <li><h1>Views</h1></li>
-                                <li><h4>Item details</h4></li>
-                            </ul>
-                            <div class="button">
-                                <button id="buy1">Buy</button>
-                            </div>
-                         </div>
-                    </div>
-                    <div class="product" id="product-1">
-                        <div class="content">
-                            <ul class="text">
-                                <li><h1>Comments Hearts</h1></li>
-                                <li><h4>Item details</h4></li>
-                            </ul>
-                            <div class="button">
-                                <button id="buy2">Buy</button>
-                            </div>
-                         </div>
-                    </div>
-                    <div class="product" id="product-1">
-                        <div class="content">
-                            <ul class="text">
-                                <li><h1>Hearts</h1></li>
-                                <li><h4>Item details</h4></li>
-                            </ul>
-                            <div class="button">
-                                <button id="buy3">Buy</button>
-                            </div>
-                         </div>
-                    </div>
-                    <div class="product" id="product-1">
-                        <div class="content">
-                            <ul class="text">
-                                <li><h1>Follower</h1></li>
-                                <li><h4>Item details</h4></li>
-                            </ul>
-                            <div class="button">
-                                <button id="buy4">Buy</button>
-                            </div>
-                         </div>
-                    </div>
+            <div class="shop">
+                <h1 style="text-align: center;margin-top: 10px; margin-bottom: 10px;">Our Products</h1>
+                <div class="product" id="product-1">
+                    <div class="content">
+                        <ul class="text">
+                            <li><h1>Views</h1></li>
+                            <li><h4>Item details</h4></li>
+                        </ul>
+                        <div class="button">
+                            <button class="btn" id="buy1">Buy</button>
+                        </div>
+                        </div>
+                </div>
+                <div class="product" id="product-1">
+                    <div class="content">
+                        <ul class="text">
+                            <li><h1>Comments Hearts</h1></li>
+                            <li><h4>Item details</h4></li>
+                        </ul>
+                        <div class="button">
+                            <button class="btn" id="buy2">Buy</button>
+                        </div>
+                        </div>
+                </div>
+                <div class="product" id="product-1">
+                    <div class="content">
+                        <ul class="text">
+                            <li><h1>Hearts</h1></li>
+                            <li><h4>Item details</h4></li>
+                        </ul>
+                        <div class="button">
+                            <button class="btn" id="buy3">Buy</button>
+                        </div>
+                        </div>
+                </div>
+                <div class="product" id="product-1">
+                    <div class="content">
+                        <ul class="text">
+                            <li><h1>Follower</h1></li>
+                            <li><h4>Item details</h4></li>
+                        </ul>
+                        <div class="button">
+                            <button class="btn" id="buy4">Buy</button>
+                        </div>
+                        </div>
                 </div>
             </div>
         </div>
