--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <div class="text">
                         <h4 class="msg"></h4>
                     </div>
-                    <div class="btn">
-                        <button class="btn" id="Close-Popup">Close</button>
+                    <div class="button">
+                        <button class="popup-btn" id="Close-Popup">Close</button>
                     </div>
                 </div>
             </div>
