--- a/p/purchases.html
+++ b/p/purchases.html
@@ -25,6 +25,8 @@
                 Your Purchases
             </h1>
             <div class="purchases">
+                <div class="product" id="product-1">
+                </div>
             </div>
         </div>
     </div>
