--- a/p/signup.html
+++ b/p/signup.html
@@ -2,59 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="../css/signin.css">
-    <title>Sign In</title>
+    <title>Signup</title>
+    <link rel="stylesheet" href="../css/signup.css">
 </head>
-<body>
-    <div class="img-area"></div>
-    <div class="nav">
-        <a href="/">
-            <div>
-                <i></i>
-                <h1>Back</h1>
-            </div>
-        </a>
-    </div>
-
-    <div class="main_div">
+    <body>
         <div class="box">
             <h1>Sign Up</h1>
-            <form action="" method="">
-                <h6 id="Error"></h6>
-                <div class="inputBox">
-                    <input type="text" id="username" autocomplete="off" required>
-                    <label> Username </label>
-                </div>
-                <div class="inputBox">
-                    <input type="text" id="email" autocomplete="off" required>
-                    <label> Email </label>
-                </div>
-                <div class="inputBox">
-                    <input type="password" id="password" autocomplete="off" required>
-                    <label> Password </label>
-                </div>
-                <button class="submit" >Sign Up</button>
-                <h6>You aready have an Account? <a href="../p/login.html">Click here</a></h6>
-            </form>
 
+            <div class="inputBox">
+                <input placeholder="Email" type="text" id="email" autocomplete="off">
+            </div>
+            <div class="inputBox">
+                <input placeholder="Username" type="text" id="username" autocomplete="off">
+            </div>
+            <div class="inputBox">
+                <input placeholder="Password" type="password" id="password" autocomplete="off">
+            </div>
+
+            <h5 id="error" style="display: none;"></h5>
+
+            <button class="submit">Sign Up</button>
         </div>
-    </div>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-firestore.js"></script>
-    <script src="../scripts/FirebaseConfig.js"></script>
-    
-    <script>
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const db = firebase.firestore();
-        db.settings({ timestampsInSnapshots: true });
-    </script>
 
-    <script src="../scripts/signup.js"></script>
-</body>
+        <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-firestore.js"></script>
+        <script src="../config/firebase.js"></script>
+        <script>
+            firebase.initializeApp(firebaseConfig);
+            const auth = firebase.auth();
+            const db = firebase.firestore();
+            db.settings({ timestampsInSnapshots: true });
+        </script>
+
+        <script src="../js/signup.js"></script>
+
+    </body>
 </html>
